--- a/package.json
+++ b/package.json
@@ -13,20 +13,27 @@
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^6.19.0",
     "@prisma/engines": "2.29.0-3.validate-node-api-download-d616ac2e761de0623c4f0494620b4199161d9019",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "heroicons": "^2.2.0",
     "next": "16.0.1",
+    "next-auth": "5.0.0-beta.30",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "use-debounce": "^10.0.6",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "prisma": "^6.19.0",
